================
 Change history
================

2.1.4
=====
:release-date: 2015-01-16 10:00 A.M CET
:by: Tommaso Barbugli

* Configurable API timeout


2.1.0
=====
:release-date: 2014-12-18 20:00 A.M GMT
:by: Tommaso Barbugli

* Configurable API location
* Configurable API version

2.0.1
=====
:release-date: 2014-11-10 15:00 A.M GMT
:by: Tommaso Barbugli

* Simplified syntax to create feeds, follow and unfollow feeds.
* Default HTTP timeout of 3s
* Better exception messages
* Add support for mark seen


1.0.1
=====
:release-date: 2014-09-08 10:00 A.M GMT
:by: Tommaso Barbugli

Fixes
-----

* Fix mark_read as boolean


1.0.0
=====
:release-date: 2014-09-08 08:00 A.M GMT
:by: Tommaso Barbugli

* Add support for mark read (notifications feeds)
