@@ -15,6 +15,7 @@ Gem::Specification.new do |gem|
   gem.files = Dir['lib/**/*']
   gem.license = 'Apache-2.0'
   gem.add_dependency 'httparty', '~> 0'
+  gem.add_dependency 'http_signatures', '~> 0'
   gem.add_development_dependency 'rake', '~> 0'
   gem.add_development_dependency 'rspec', '~> 2.10'
   gem.add_development_dependency 'simplecov', '~> 0.7'
